--- a/assets/contact.css
+++ b/assets/contact.css
@@ -48,7 +48,6 @@ body {
   padding-inline: 60vh;
 }
   
-
 .form {
   margin-top: 5vh;
   display: flex;
@@ -108,6 +107,10 @@ html {
       margin: 5px;
       padding: 2.5px 12.5px;
     }
+
+  .cool {
+    padding-inline: 5vh
+  }
 
     
 
