--- a/assets/products.css
+++ b/assets/products.css
@@ -328,6 +328,12 @@ html {
     background: #FF0000;
   }
 
+  .copyright {
+    margin-block: 3vh;
+    display: flex;
+    justify-content: center;
+  }
+
 
   @media only screen and (max-width: 768px) {
     body {
