--- a/assets/products.css
+++ b/assets/products.css
@@ -17,6 +17,8 @@ body {
     overflow-y: hidden
   }
 
+  
+
 .crazy {
     display: flex; 
     justify-content: center;
@@ -146,12 +148,26 @@ h2 {
 }
 
 .usabo {
+    position: relative;
+    height: 100vh; /* Adjust the height as needed */
     background-image: url('webstuff/usabobg.jpg'); /* Update with your image */
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
-    transform: scale(1);
 }
+
+.usabo::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); /* Adjust the opacity (the last parameter) as needed */
+    z-index: 1;
+}
+
+
 
 #usabob {
     color: #000;
