--- a/assets/products.css
+++ b/assets/products.css
@@ -328,6 +328,17 @@ h2 {
     border: none;
 }
 
+.useso::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.3); /* Adjust the opacity (the last parameter) as needed */
+    z-index: 1;
+}
+
 #usesop:hover {
     animation: btnnanim ease 0.2s;
     animation-fill-mode: forwards;
