not finished lol

--- a/assets/programs.css
+++ b/assets/programs.css
@@ -179,8 +179,8 @@ h2 {
     padding-inline: 2vw;
     padding-block: 1vw;
     margin-inline: 18vw;
-    border-color:#f0ec16;
-    background-color: #54530a;
+    border-color:#a136e3;
+    background-color: #43165e;
     border-radius: 18px;
 }
 
