--- a/assets/products.css
+++ b/assets/products.css
@@ -19,30 +19,29 @@ body {
 
   
 
-.crazy {
-    display: flex; 
-    justify-content: center;
-}
+
 
 #logo {
-    margin-top: -6vh;
-    width: 300px;
-    height: auto;
-    margin-bottom: -8vh;
+    position: absolute;
+    width: 150px;
+    height: 93.75;
+    left: 0;
+    margin-left: 50px;
 }
 
-#prod, #prog, #te, #cont {
+#yoop, #prod, #prog, #te, #cont {
     color: #fff;
     background-color: transparent;
     border: 1px solid transparent;
-    padding: 10px 50px;
+    padding: 10px 30px;
+    margin-top: 30px;
+    margin-bottom: 50px;
     font-size: 110%;
     font-family: 'Poppins', sans-serif;
 }
 
 
-
-#prod:hover, #prog:hover, #te:hover, #cont:hover {
+#yoop:hover, #prod:hover, #prog:hover, #te:hover, #cont:hover {
     border-bottom: 1px solid #fff;
     cursor: pointer;
 }
@@ -373,6 +372,8 @@ html {
         flex-direction: column;
         align-items: center;
         padding: 10px;
+        background: transparent;
+        font-family: 'Poppins', sans-serif;
         }
     
     #logo {
