--- a/assets/styles.css
+++ b/assets/styles.css
@@ -183,7 +183,8 @@ h1 img {
 #btext {
   text-align: center; 
   font-size: 150%; 
-  padding-bottom: 60vh;
+  padding-bottom: 10px;
+  margin-top: -175px;
 }
 
 
@@ -193,7 +194,7 @@ section {
 } */
 
 h1 {
-  padding-block:4vh 2vh;
+  padding-block:4vh 20px;
 }
 
 
@@ -382,6 +383,22 @@ p {
   background-image: linear-gradient(241deg, #189FFD, #AE63E8);
   border: none;
 }
+
+.btna {
+    padding-bottom: 13%;
+    margin-bottom: 60vh;
+    padding: 15px 28px;
+    border-radius: 16px;
+    font-size: xx-large;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight:bold;
+    cursor: pointer;
+    color: #fff;
+    background-color: transparent;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 6px;
+    border-color: #fff; }
 
 
 
