--- a/assets/contact.css
+++ b/assets/contact.css
@@ -17,19 +17,29 @@ body {
 }
 
 #logo {
-    margin-top: -6vh;
-    width: 335px;
-    height: auto;
-    margin-bottom: -8vh;
+  position: absolute;
+  width: 150px;
+  height: 93.75;
+  left: 0;
+  margin-left: 50px;
 }
 
-#prod, #prog, #te, #cont {
-    color: #fff;
-    background-color: transparent;
-    border: 1px solid transparent;
-    padding: 10px 50px;
-    font-size: 125%;
-    font-family: 'Poppins', sans-serif;
+#yoop, #prod, #prog, #te, #cont {
+  color: #fff;
+  background-color: transparent;
+  border: 1px solid transparent;
+  padding: 10px 30px;
+  margin-top: 30px;
+  margin-bottom: 50px;
+  font-size: 110%;
+  font-family: 'Poppins', sans-serif;
+}
+
+
+
+#yoop:hover, #prod:hover, #prog:hover, #te:hover, #cont:hover {
+    border-bottom: 1px solid #fff;
+    cursor: pointer;
 }
 
 body {
@@ -38,10 +48,6 @@ body {
 }
 
 
-#prod:hover, #prog:hover, #te:hover, #cont:hover {
-    border-bottom: 1px solid #fff;
-    cursor: pointer;
-}
 
 
 .cool {
