--- a/assets/styles.css
+++ b/assets/styles.css
@@ -158,7 +158,7 @@ nav a:hover {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("webstuff/titleb.png");
+  background-image: url("webstuff/titleb2.png");
   background-position: center;
   background-size: cover;
   opacity: 1; /* Initial opacity */
