--- a/assets/styles.css
+++ b/assets/styles.css
@@ -176,7 +176,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url("webstuff/titleb2.png");
+  background-image: url("webstuff/tibleb2.gif");
   background-position: center;
   background-size: cover;
   opacity: 1; 
